--- a/index.html
+++ b/index.html
@@ -15,8 +15,37 @@
   </head>
   <body>
     <div class="container">
-      <h1>Hello world</h1>
-      <a href="" class="btn btn-primary">Click Me</a>
+      <div class="weather-app">
+        <h1>New York</h1>
+        <ul>
+          <li>Friday</li>
+          <li>Clear</li>
+        </ul>
+        <div class="row">
+          <div class="col-6">
+            <img
+              src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
+              alt="Clear"
+            />
+            12°C | °F
+          </div>
+          <div class="col- 6">
+            <ul>
+              <li>Precipitation</li>
+              <li>Humidity: 73%</li>
+              <li>Wind: 2 km/h</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <small>
+        <a
+          href="https://github.com/Peri2505/https---github.com-Peri2505-Weather-APP"
+          target="_blank"
+          >Open-source code</a
+        >
+        by Aiperi
+      </small>
     </div>
     <script src="./scrypt.js"></script>
   </body>
