--- a/index.html
+++ b/index.html
@@ -4,48 +4,51 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css" />
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="./style.css" />
     <title>Weather APP</title>
   </head>
   <body>
     <div class="container">
-      <div class="weather-app">
-        <h1>New York</h1>
-        <ul>
-          <li>Friday</li>
-          <li>Clear</li>
-        </ul>
-        <div class="row">
-          <div class="col-6">
-            <img
-              src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
-              alt="Clear"
-            />
-            12°C | °F
-          </div>
-          <div class="col- 6">
-            <ul>
-              <li>Precipitation</li>
-              <li>Humidity: 73%</li>
-              <li>Wind: 2 km/h</li>
-            </ul>
+      <div class="weather-app-wrapper">
+        <div class="weather-app">
+          <h1>New York</h1>
+          <ul>
+            <li>Friday</li>
+            <li>Clear</li>
+          </ul>
+          <div class="row">
+            <div class="col-6">
+              <img
+                src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
+                alt="Clear"
+              />
+              12°C | °F
+            </div>
+            <div class="col-6">
+              <ul>
+                <li>Precipitation</li>
+                <li>Humidity: 73%</li>
+                <li>Wind: 2 km/h</li>
+              </ul>
+            </div>
           </div>
         </div>
+        <small>
+          <a
+            href="https://github.com/Peri2505/https---github.com-Peri2505-Weather-APP"
+            target="_blank"
+            >Open-source code</a
+          >
+          by Aiperi
+        </small>
       </div>
-      <small>
-        <a
-          href="https://github.com/Peri2505/https---github.com-Peri2505-Weather-APP"
-          target="_blank"
-          >Open-source code</a
-        >
-        by Aiperi
-      </small>
     </div>
     <script src="./scrypt.js"></script>
   </body>
